fix: add unauthorized page and route